--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "google-maps": "^3.2.1",
     "hbs": "~4.0.0",
     "morgan": "~1.7.0",
+    "nodemon": "^1.10.0",
     "serve-favicon": "~2.3.0"
   }
 }
